[package]
name = "tx-from-scratch"
version = "0.1.0"
edition = "2021"
authors = ["David Kulman kulman.david@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kuly14/tx-from-scratch"
documentation = "https://docs.rs/tx-from-scratch/latest/tx_from_scratch/"
description = "Library that allows you to create and sign ethereum legacy transactions from scratch" 

keywords = ["ethereum", "transaction", "crypto"]

categories = ["cryptography::cryptocurrencies"]

[dependencies]
rlp = "0.5.2"
sha3 = "0.10.6"
secp256k1 = { version = "0.25.0", features = ["default", "recovery"] }

[dev-dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
ethereum-types = "0.14.1"
web3 = { version = "0.18.0", features = ["bytes"] }
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.16.1", features = ["full"] }
hex = "0.4.3"
